[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "template-python"
version = "0.0.1"
description = "Template for python projects."
authors = [{name = "cchenu"}]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "tqdm>=4.64",
]

[project.urls]
homepage = "https://github.com/cchenu/template-python"
documentation = "https://github.com/cchenu/template-python"
repository = "https://github.com/cchenu/template-python"

[tool.ruff]
line-length = 79
target-version = "py313"
fix = false
extend-exclude = ["venv"]

[tool.ruff.lint]
unfixable = []
select = [
  "ALL"
]

ignore = [
  "PLR0904", # too-many-public-methods
  "PLR0911", # Too many returns
  "PLR0912", # Too many branches
  "PLR0913", # Too many arguments to function call
  "PLR0914", # Too many locals
  "PLR0915", # Too many statements
  "PLR0917", # too-many-positional-arguments
  "D203", # incorrect-blank-line-before-class
  "D212", # multi-line-summary-first-line 
  "COM812", # missing-trailing-coma
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
  "C901", # complex-structure
  "CPY001", # missing-copyright-notice
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "S101", # assert
  "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true
quote-style = "preserve"

[tool.black]
line-length = 79
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
disallow_any_unimported = true
# disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true


[tool.isort]
profile = "black"
